# bug-detect-diagnose-subtle-logic-drift-i

./: CHANGES.md  PLAN.md  README.md  STEP-1.md  STEP-2.md  STEP-3.md  STEP-4.md  STEP-5.md  SUMMARY.md  TASK.md  baseline_traces.json  collected_traces.json  current_traces.json  drift_analyzer.py  drift_detector.py  main.py  pyproject.toml  report.txt  reporter.py  test_report.txt  test_trace_loading.py  test_traces.json  trace_collector.py  verify_fix.py  workflow_detector.py
agentool/: __init__.py  eval.py  tool.py  trace.py
